supports mobile view

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "iaextractor",
   "description": "__MSG_appDesc__",
   "author": "Feller",
-  "version": "0.8.0",
+  "version": "0.8.5",
   "manifest_version": 2,
   "default_locale": "en",
   "permissions": [
@@ -13,6 +13,7 @@
     "downloads",
     "notifications",
     "*://www.youtube.com/*",
+    "*://m.youtube.com/*",
     "*://*.googlevideo.com/*"
   ],
   "background": {
@@ -37,7 +38,8 @@
   },
   "content_scripts": [{
     "matches": [
-      "*://www.youtube.com/*"
+      "*://www.youtube.com/*",
+      "*://m.youtube.com/*"
     ],
     "js": [
       "data/inject/id.js",
@@ -49,7 +51,7 @@
     "run_at": "document_start",
     "all_frames": false
   }],
-  "homepage_url": "http://technologyto.com/extractor.html",
+  "homepage_url": "https://technologyto.com/extractor.html",
   "icons": {
     "16": "/data/icons/16.png",
     "32": "/data/icons/32.png",
@@ -65,11 +67,5 @@
   "options_ui": {
     "page": "data/options/index.html",
     "chrome_style": true
-  },
-  "applications": {
-    "gecko": {
-      "id": "{f73df109-8fb4-453e-8373-f59e61ca4da3}",
-      "strict_min_version": "52.0"
-    }
   }
 }
